@@ -1,5 +1,6 @@
 Changes for 1.6.5
 
+ - [ZBX-922] fixed selection proper hosts for hosts-groups assign (Artem)
  - [ZBX-559] fixed wrong format of input file in help info of zabbix_sender (Alexei)
  - [DEV-381] added printing of SVN revision number to all binaries (Alexei)
  - [ZBX-914] fixed SQL error while updating configuration tables on the proxy side (Sasha)
